// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c0 {
  margin: 0px;
  padding: 0px;
  line-height: 1.5;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  color: #666;
}

<span
  class="c0"
>
  Hello world!
</span>
`;

exports[`renders correctly with variant 1`] = `
.c0 {
  margin: 0px;
  padding: 0px;
  line-height: 1.5;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  color: #666;
}

<span
  class="c0"
>
  Body
</span>
`;
